--- a/projects/ng2-image-upload/src/lib/image-upload/image-upload.component.css
+++ b/projects/ng2-image-upload/src/lib/image-upload/image-upload.component.css
@@ -46,6 +46,7 @@ label.img-ul-button input[type=file] {
 }
 
 .img-ul-upload {
+  color: red !important;
     background-color: var(--active-color);
 }
 
