--- a/projects/ng2-image-upload/src/lib/image-upload/image-upload.component.html
+++ b/projects/ng2-image-upload/src/lib/image-upload/image-upload.component.html
@@ -5,8 +5,7 @@
      [ngClass]="cssClass"
      [ngClass]="{'img-ul-file-is-over': fileOver}"
      [ngStyle]="style?.layout">
-  <div class="img-ul-file-upload img-ul-hr-inline-group"
-       (change)="onFileChange(input.files)">
+  <div class="img-ul-file-upload img-ul-hr-inline-group">
     <label *ngIf="fileCounter != max"
            class="img-ul-upload img-ul-button"
            [ngStyle]="style?.selectButton"
@@ -15,8 +14,9 @@
       <input type="file"
              [disabled]="disabled"
              [accept]="supportedExtensions"
-             multiple
-             (change)="onFileChange(input.files)">
+             [multiple]="max > 1"
+             (change)="onFileChange(input.files)"
+             #input>
     </label>
     <button *ngIf="fileCounter > 0"
             [disabled]="disabled"
@@ -25,21 +25,15 @@
             [ngStyle]="style?.clearButton"
             [innerText]="clearButtonCaption">
     </button>
-    <label *ngIf="fileCounter != max"
-           class="img-ul-drag-box-msg">
-      {{dropBoxMessage}}
-      <input type="file"
-             [disabled]="disabled"
-             [accept]="supportedExtensions"
-             multiple
-             (change)="onFileChange(input.files)"
-             #input>
-    </label>
-    <div (change)="onFileChange(input.files)"
-         class="img-ul-drag-box-msg"
-         [innerText]="dropBoxMessage"></div>
-
+    <input class="img-ul-drag-box-msg"
+           [disabled]="disabled"
+           [accept]="supportedExtensions"
+           [multiple]="max > 1"
+           (change)="onFileChange(input.files)"
+           #input
+           [innerText]="dropBoxMessage">
   </div>
+
   <p class="img-ul-file-too-large"
      *ngIf="showFileTooLargeMessage"
      [innerText]="fileTooLargeMessage"></p>
